# agent-arch

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  arch-read.sh  arch-repo-complete-strategy.md  arch-repo-komplett-strategi.md  pyproject.toml  superpowers-copilot-adoption.md
.agent-arch-install-check/scripts/: agent-arch-install.sh
.github/: copilot-instructions.md
.github/hooks/: arch-policy.json
.obsidian/: workspace.json
docs/: README.md
docs/adoption/: adopt-a-central-architecture-repo.md  adopt-a-solution-repo.md  adopt-in-a-new-repo.md  copilot-superpowers.md  install-github-copilot-in-a-new-repo.md  quickstart-central-architecture-repo.md  quickstart-solution-repo.md
docs/method/: document-model.md  governance.md  overview.md
docs/reference/: repository-layout.md  templates-and-starter-assets.md
docs/solution-space/: README.md  creativity-first-governance-for-agent-arch.md  information-flow-pattern-from-pilot.md  repository-intake-in-solution-repos.md
install/profiles/: solution-creativity-first-pilot.manifest  solution-standard.manifest
scripts/: agent-arch-install.sh  arch-init  arch-knowledge  arch-llm-adapter.py  arch-policy.sh  arch-read.sh  common.sh  find-affected-services.sh  validate-docs.sh
scripts/arch_knowledge/: __init__.py  __main__.py  cli.py  compile.py  config.py  doctor.py  flush.py  lint.py  llm.py  utils.py
templates/service/: AGENTS.md.tmpl  CLAUDE.md.tmpl  (+2 more)
tests/: test_arch_init.py  test_arch_llm_adapter.py  test_cli.py  test_compile.py  test_doctor.py  test_flush.py  test_lint.py  test_llm_adapter.py
(+30 files in other folders)
