[project]
name = "arch-knowledge"
version = "0.1.0"
description = "Architecture knowledge management CLI for creativity-first governance"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "openai>=1.14.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
arch-knowledge = "arch_knowledge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts/arch_knowledge"]

[dependency-groups]
dev = []
